@@ -5,6 +5,8 @@ espresso (0.99.57) UNRELEASED; urgency=low
   * KDE frontend:
     - Remove bogus hostname, fullname, and name instance variables; fix
       default hostname setting in info_loop() (closes: Malone #40143).
+    - Remove old set_locales function, which is no longer needed and
+      apparently causes a crash in pykde.
   * GTK frontend:
     - Add "Settings" category to .desktop file in order to move the menu
       entry to System -> Applications.
